# researchAgentC

./: .gitignore  CLAUDE.md  IMPLEMENTATION-P2.md  IMPLEMENTATION-P3.md  IMPLEMENTATION-P4.md  IMPLEMENTATION-P5.md  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml  run_full.py
adapters/: __init__.py  aide_adapter.py  evaluator.py  policy.py
config/: claims.yaml  claims_patterns.yaml  loop.yaml  render.yaml
core/: __init__.py  checker.py  contract.py  corpus.py  gates.py  render.py  results.py
figures/: __init__.py  __main__.py  _lib.py
harness/: __init__.py  budget.py  data.py  evaluate.py
ideation/: __init__.py  feasibility.py  fill.py  generate.py  novelty.py  redteam.py  score.py  store.py
loop/: __init__.py  ablation.py  confirm.py  context.py  cost.py  dedup.py  ledger.py  run_loop.py  sentry.py  tree.py
paper/: claims.yaml
review/: __init__.py  autocheck.py  objection.py  panel.py
sandbox/: Dockerfile  requirements-sandbox.txt  run_node.sh
schema/: audit.sql  claims.sql  corpus.sql  ideas.sql  ledger.sql  results.sql  review.sql  sentry.sql  tree.sql
tests/: _helpers.py  conftest.py  test_ablation.py  test_adapters.py  test_aide_live.py  test_boundary.py  test_claims.py  test_confirm.py  test_context.py  test_corpus.py  test_cost.py  test_dedup.py  test_dedup_live.py  test_figures.py  test_full_pipeline.py  test_gates.py  test_harness.py  test_ideation.py  test_invariants.py  test_ledger.py  test_negative_path.py  test_render.py  test_results.py  test_review.py  test_run_loop.py  test_sentry.py  test_smoke_e2e.py  test_templates.py  (+2 more)
(+16 files in other folders)
